syntax = "proto3";

option csharp_namespace = "AcademyCloud.Expenses.Services";

package user_management;

service UserManagement {
	rpc AddUser (AddUserReply) returns (AddUserReply);
}

message AddUserRequest {
	
}

message AddUserReply {
	
}